[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-adversarial-example-generation"
version = "0.1.0"
description = "Adversarial example generation for YOLO object detection models."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "J. Reber" }
]
requires-python = ">=3.6"
dependencies = [
    "torch>=1.5.0",
    "numpy>=1.18.5",
    "opencv-python>=4.2.0.34",
    "matplotlib>=3.2.2",
    "scipy>=1.4.1",
    "Pillow>=7.1.2",
    "tqdm>=4.46.0"
]

[tool.black]
line-length = 88
target-version = ["py36"]
